k8s/graphQLServerDeployment.yaml
apiVersion: v1
kind: Service
metadata:
  name: price-api
spec:
  ports:
    - port: 80
      targetPort: 5000
  selector:
    app: price-api
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: price-api
spec:
  replicas: 2
  selector:
    matchLabels:
      app: price-api
  template:
    metadata:
      labels:
        app: price-api
    spec:
      containers:
        - name: price-api
          image: <IMAGE>
          ports:
            - containerPort: 5000
          imagePullPolicy: Always
