k8s/ingress-prod.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: crypto-tracker-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
    cert-manager.io/issuer: "letsencrypt-prod"
spec:
  tls:
    - hosts:
        - cryptotracker.saulmaldonado.me
      secretName: cryptotracker.saulmaldonado.me-tls
  rules:
    - host: cryptotracker.saulmaldonado.me
      http:
        paths:
          - path: /
            backend:
              serviceName: price-api
              servicePort: 80
