k8s/ingress-staging.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: crypto-tracker-ingress
  annotations:
    kubernetes.io/ingress.class: 'nginx'
    cert-manager.io/issuer: 'letsencrypt-staging'
spec:
  tls:
    - hosts:
        - cryptotracker.saulmaldonado.me
      secretName: cryptotracker.saulmaldonado.me-tls
  rules:
    - host: cryptotracker.saulmaldonado.me
      http:
        paths:
          - path: /graphql
            backend:
              serviceName: price-api
              servicePort: 80
          - path: /
            backend:
              serviceName: github-redirect
