k8s/ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: nginx-ingress
spec:
  rules:
    - host: cryptotracker.saulmaldonado.me
      http:
        paths:
          - backend:
              serviceName: price-api
              servicePort: 80
